Update portfolio: center logos behind close buttons in preview modals and remove Loloto app

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dreidvd.github.io/">
-    <meta property="og:title" content="FDDevelops | Web & Mobile Developer Portfolio">
+    <meta property="og:title" content="ADDevelops | Web & Mobile Developer Portfolio">
     <meta property="og:description"
         content="Portfolio of Franze Andrei G. David - Web & Mobile Developer specializing in Flutter, Unity, JavaScript, PHP, and modern web technologies.">
     <meta property="og:image" content="../WEBSITE LOGO.png">
@@ -21,12 +21,12 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dreidvd.github.io/">
-    <meta property="twitter:title" content="FDDevelops | Web & Mobile Developer Portfolio">
+    <meta property="twitter:title" content="ADDevelops | Web & Mobile Developer Portfolio">
     <meta property="twitter:description"
         content="Portfolio of Franze Andrei G. David - Web & Mobile Developer specializing in Flutter, Unity, JavaScript, PHP, and modern web technologies.">
     <meta property="twitter:image" content="../WEBSITE LOGO.png">
 
-    <title>FDDevelops | Web & Mobile Developer Portfolio</title>
+    <title>ADDevelops | Web & Mobile Developer Portfolio</title>
     <link rel="icon" type="image/png" href="../WEBSITE LOGO.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -605,27 +605,6 @@
                                 </div>
                                 <div class="project-actions">
                                     <button class="project-link" data-app="kids-cancervive">View Details</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="project-card slide" data-type="mobile">
-                            <div class="project-preview" data-app="loloto">
-                                <div class="project-placeholder-text">Loloto Management</div>
-                            </div>
-                            <div class="project-info">
-                                <h3 class="project-title">Loloto Management</h3>
-                                <p class="project-description">Business management app for junkshops with inventory
-                                    tracking,
-                                    financial analytics, and receipt management.</p>
-                                <div class="project-tags">
-                                    <span class="tech-tag">Flutter</span>
-                                    <span class="tech-tag">SQLite</span>
-                                    <span class="tech-tag">Analytics</span>
-                                    <span class="tech-tag">Finance</span>
-                                </div>
-                                <div class="project-actions">
-                                    <button class="project-link" data-app="loloto">View Details</button>
                                 </div>
                             </div>
                         </div>
