Add Experience section with freelance and internship roles
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dreidvd.github.io/">
+    <meta property="og:url" content="https://dreidvd.github.io/ad-develop/">
     <meta property="og:title" content="ADDevelops | Web & Mobile Developer Portfolio">
     <meta property="og:description"
         content="Portfolio of Franze Andrei G. David - Web & Mobile Developer specializing in Flutter, Unity, JavaScript, PHP, and modern web technologies.">
-    <meta property="og:image" content="../WEBSITE LOGO.png">
+    <meta property="og:image" content="WEBSITE LOGO.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://dreidvd.github.io/">
+    <meta property="twitter:url" content="https://dreidvd.github.io/ad-develop/">
     <meta property="twitter:title" content="ADDevelops | Web & Mobile Developer Portfolio">
     <meta property="twitter:description"
         content="Portfolio of Franze Andrei G. David - Web & Mobile Developer specializing in Flutter, Unity, JavaScript, PHP, and modern web technologies.">
-    <meta property="twitter:image" content="../WEBSITE LOGO.png">
+    <meta property="twitter:image" content="WEBSITE LOGO.png">
 
     <title>ADDevelops | Web & Mobile Developer Portfolio</title>
-    <link rel="icon" type="image/png" href="../WEBSITE LOGO.png">
+    <link rel="icon" type="image/png" href="WEBSITE LOGO.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
     <header>
         <nav>
             <a href="#home" class="logo-link">
-                <img src="../WEBSITE LOGO.png" alt="FDDevelops Logo" class="logo-img" loading="lazy">
+                <img src="WEBSITE LOGO.png" alt="FDDevelops Logo" class="logo-img" loading="lazy">
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -109,7 +109,7 @@
                                 </svg>
                             </a>
                             <a href="#contact" class="btn btn-outline">Get In Touch</a>
-                            <a href="../resume/Franze Andrei David.pdf" class="btn btn-secondary" download>
+                            <a href="resume/DAVID_FRANZE_ANDREI_G_RESUME.pdf" class="btn btn-secondary" download>
                                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2">
                                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3" />
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="hero-social">
-                        <span class="social-label">Reach me:</span>
+                        <span class="social-label">Follow me:</span>
                         <a href="https://github.com/dreidvd" target="_blank" rel="noopener noreferrer"
                             class="social-link" aria-label="GitHub">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
@@ -591,10 +591,10 @@
                                             <div class="phone-screen">
                                                 <div class="screenshot-carousel" data-carousel="kc-1">
                                                     <div class="screenshot-slide active"
-                                                        style="background-image: url('../KC APP/app image/main dash board.jpg');">
+                                                        style="background-image: url('KC APP/app image/main dash board.jpg');">
                                                     </div>
                                                     <div class="screenshot-slide"
-                                                        style="background-image: url('../KC APP/app image/main dashboard 2.jpg');">
+                                                        style="background-image: url('KC APP/app image/main dashboard 2.jpg');">
                                                     </div>
                                                 </div>
                                             </div>
@@ -606,10 +606,10 @@
                                             <div class="phone-screen">
                                                 <div class="screenshot-carousel" data-carousel="kc-2">
                                                     <div class="screenshot-slide active"
-                                                        style="background-image: url('../KC APP/app image/hospital.jpg');">
+                                                        style="background-image: url('KC APP/app image/hospital.jpg');">
                                                     </div>
                                                     <div class="screenshot-slide"
-                                                        style="background-image: url('../KC APP/app image/chemo info.jpg');">
+                                                        style="background-image: url('KC APP/app image/chemo info.jpg');">
                                                     </div>
                                                 </div>
                                             </div>
@@ -621,10 +621,10 @@
                                             <div class="phone-screen">
                                                 <div class="screenshot-carousel" data-carousel="kc-3">
                                                     <div class="screenshot-slide active"
-                                                        style="background-image: url('../KC APP/app image/donation.jpg');">
+                                                        style="background-image: url('KC APP/app image/donation.jpg');">
                                                     </div>
                                                     <div class="screenshot-slide"
-                                                        style="background-image: url('../KC APP/app image/finance .jpg');">
+                                                        style="background-image: url('KC APP/app image/finance .jpg');">
                                                     </div>
                                                 </div>
                                             </div>
@@ -649,27 +649,6 @@
                                 </div>
                                 <div class="project-actions">
                                     <button class="project-link" data-app="kids-cancervive">View Details</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="project-card slide" data-type="mobile">
-                            <div class="project-preview" data-app="loloto">
-                                <div class="project-placeholder-text">Loloto Management</div>
-                            </div>
-                            <div class="project-info">
-                                <h3 class="project-title">Loloto Management</h3>
-                                <p class="project-description">Business management app for junkshops with inventory
-                                    tracking,
-                                    financial analytics, and receipt management.</p>
-                                <div class="project-tags">
-                                    <span class="tech-tag">Flutter</span>
-                                    <span class="tech-tag">SQLite</span>
-                                    <span class="tech-tag">Analytics</span>
-                                    <span class="tech-tag">Finance</span>
-                                </div>
-                                <div class="project-actions">
-                                    <button class="project-link" data-app="loloto">View Details</button>
                                 </div>
                             </div>
                         </div>
@@ -877,9 +856,9 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
-    <script src="../js/projects-slideshow.js"></script>
-    <script src="../js/enhanced-animations.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/projects-slideshow.js"></script>
+    <script src="js/enhanced-animations.js"></script>
 </body>
 
 </html>
